[package]
name = "rs-pbbot-demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.2.3", features = ["ws", "headers"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = "0.2"
headers="0.3.4"
futures = "0.3"
prost = "0.8"
# Only necessary if using Protobuf well-known types:
prost-types = "0.8"

[build-dependencies]
prost-build = { version = "0.8.0" }
